# TrinityCore

./: .gitignore  .project  .restyled.yaml  .travis.yml  AUTHORS  CMakeLists.txt  PreLoad.cmake  README  README.md  THANKS  appveyor.yml  mmaps_patch_v009a.patch  mmaps_patch_v101.patch  revision_data.h.in.cmake  to-do.md
dep/: CMakeLists.txt  PackageList.txt
dep/CascLib/: CMakeLists.txt
dep/SFMT/: CMakeLists.txt  SFMT.h  randomc.h
dep/argon2/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/bzip2/: CMakeLists.txt
dep/efsw/: CMakeLists.txt
dep/fmt/: CMakeLists.txt  README.rst
dep/g3dlite/: CMakeLists.txt
dep/g3dlite/include/G3D/: GMutex.h  System.h  platform.h
dep/gsoap/: CMakeLists.txt  tc_upgrades.txt
dep/jemalloc/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/mysql/: CMakeLists.txt
dep/openssl/: CMakeLists.txt
dep/poco/Foundation/: CMakeLists.txt
dep/process/: CMakeLists.txt
dep/protobuf/: CMakeLists.txt
dep/rapidjson/: CMakeLists.txt
dep/readline/: CMakeLists.txt
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/threads/: CMakeLists.txt
dep/utf8cpp/: CMakeLists.txt
dep/valgrind/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: Banner.cpp  Banner.h  CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  GitRevision.cpp  GitRevision.h
src/common/Asio/: AsioHacksFwd.h  DeadlineTimer.h  IoContext.h  IpAddress.h  IpNetwork.h  Resolver.h  Strand.h
src/common/Collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  DynamicTree.cpp  DynamicTree.h  RegularGrid.h  VMapDefinitions.h
src/common/Collision/Management/: IVMapManager.h  MMapFactory.cpp  MMapFactory.h  MMapManager.cpp  MMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/common/Collision/Maps/: MapDefines.h  MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/common/Collision/Models/: GameObjectModel.cpp  GameObjectModel.h  ModelIgnoreFlags.h  ModelInstance.cpp  ModelInstance.h  WorldModel.cpp  WorldModel.h
src/common/Configuration/: BuiltInConfig.cpp  BuiltInConfig.h  Config.cpp  Config.h
src/common/Cryptography/: AES.cpp  AES.h  ARC4.cpp  ARC4.h  Argon2.cpp  Argon2.h  BigNumber.cpp  BigNumber.h  CryptoConstants.h  CryptoGenerics.h  CryptoHash.h  CryptoRandom.cpp  CryptoRandom.h  HMAC.h  HmacHash.cpp  HmacHash.h  OpenSSLCrypto.cpp  OpenSSLCrypto.h  RSA.cpp  RSA.h  SHA1.cpp  SHA1.h  SHA256.cpp  SHA256.h  SessionKeyGeneration.h  SessionKeyGenerator.h  TOTP.cpp  TOTP.h
src/common/Cryptography/Authentication/: AuthCrypt.cpp  AuthCrypt.h  AuthDefines.h  PacketCrypt.cpp  (+5 more)
src/common/DataStores/: DB2FileLoader.cpp  DB2FileLoader.h  DB2FileSystemSource.cpp  DB2FileSystemSource.h  DB2Meta.cpp  DB2Meta.h  DBCFileLoader.cpp  DBCFileLoader.h
src/common/Debugging/: Errors.cpp  Errors.h  WheatyExceptionReport.cpp  WheatyExceptionReport.h
src/common/Encoding/: Base32.cpp  Base32.h  Base64.cpp  Base64.h  BaseEncoding.h
src/common/Hacks/: boost_1_74_fibonacci_heap.h
src/common/IPLocation/: IPLocation.cpp  IPLocation.h
src/common/Logging/: Appender.cpp  Appender.h  AppenderConsole.cpp  AppenderConsole.h  AppenderFile.cpp  AppenderFile.h  Log.cpp  Log.h  LogCommon.h  LogMessage.cpp  LogMessage.h  LogOperation.cpp  LogOperation.h  Logger.cpp  Logger.h  SystemLog.cpp
src/common/Metric/: Metric.cpp  Metric.h
src/common/Platform/: ServiceWin32.cpp  ServiceWin32.h
src/common/PrecompiledHeaders/: commonPCH.h
src/common/Threading/: LockedQueue.h  MPSCQueue.h  ProcessPriority.cpp  ProcessPriority.h  ProducerConsumerQueue.h
src/common/Utilities/: AsyncCallbackProcessor.h  ByteConverter.h  Containers.h  DataMap.h  Duration.h  EnumClassFlag.h  EventMap.cpp  EventMap.h  EventProcessor.cpp  EventProcessor.h  FuzzyFind.h  Hash.h  IteratorPair.h  MessageBuffer.h  Optional.h  Random.cpp  Random.h  Regex.h  SFMTRand.cpp  SFMTRand.h  SmartEnum.h  StartProcess.cpp  StartProcess.h  StringConvert.h  StringFormat.cpp  StringFormat.h  TaskScheduler.cpp  TaskScheduler.h  Timer.cpp  Timer.h  Tuples.h  Types.h  Util.cpp  Util.h  advstd.h
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Doxygen.conf  Main.cpp  authserver.conf.dist  authserver.rc
src/server/bnetserver/: CMakeLists.txt  Main.cpp  bnetserver.conf.dist  bnetserver.rc  resource.h
src/server/collision/: DynamicTree.cpp  DynamicTree.h
src/server/database/: CMakeLists.txt
src/server/game/: CMakeLists.txt
src/server/proto/: BattlenetRpcErrorCodes.h  CMakeLists.txt  ServiceBase.h
src/server/scripts/: CMakeLists.txt  ScriptLoader.cpp.in.cmake  ScriptLoader.h  ScriptPCH.h
src/server/shared/: CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  Memory.h  SharedDefines.cpp  SharedDefines.h  SystemConfig.h  enuminfo_SharedDefines.cpp
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  warhead.conf.dist  worldserver.conf.dist  worldserver.rc
src/tools/: CMakeLists.txt
src/tools/connection_patcher/: CMakeLists.txt  Helper.cpp  Helper.hpp  Patcher.cpp  Patcher.hpp  Program.cpp
src/tools/extractor_common/: CMakeLists.txt  CascHandles.cpp  CascHandles.h  DB2CascFileSource.cpp  DB2CascFileSource.h  ExtractorDB2LoadInfo.h
src/tools/map_extractor/: CMakeLists.txt  System.cpp  adt.h  dbcfile.cpp  dbcfile.h  loadlib.cpp  mpq_libmpq.cpp  mpq_libmpq04.h  wdt.h
src/tools/mesh_extractor/: CMakeLists.txt
src/tools/mmaps_generator/: CMakeLists.txt  IntermediateValues.cpp  IntermediateValues.h  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h
src/tools/vmap4_assembler/: CMakeLists.txt  VMapAssembler.cpp
src/tools/vmap4_extractor/: CMakeLists.txt  adtfile.cpp  adtfile.h  cascfile.cpp  cascfile.h  dbcfile.h  gameobject_extract.cpp  model.cpp  model.h  modelheaders.h  mpq_libmpq.cpp  mpq_libmpq04.h  vec3d.h  vmapexport.cpp  vmapexport.h  wdtfile.cpp  wdtfile.h  wmo.cpp  wmo.h
(+3142 files in other folders)
