# This file is part of the MobiusCore project.
# See AUTHORS file for copyright information.

add_subdirectory(connection_patcher)
add_subdirectory(extractor_common)
add_subdirectory(map_extractor)
add_subdirectory(vmap4_assembler)
add_subdirectory(vmap4_extractor)
add_subdirectory(mmaps_generator)
